# python_automation_for_embedded_engineer

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  pyproject.toml  run.sh  test.py
src/03_python_basic/: 02_string_formatting.py  04_list_tupple_set.py  06_boolean.py  08_the_in_keyword.py  09_loop_in_python.py  11_dictionary.py  13_function.py  14_lambda_function.py  16_unpacking_arguments.py  17_OOP.py  19_class_vs_static_method.py  99_tmp_lesson.py  a_variables.py  b_string_formatting.py  c_getting_user_input.py  d_list_tupple_set.py  e_advance_set_operation.py  f_boolean.py  l_destructuring_variables.py
src/database/: pyproject.toml
src/database/src/demo_database/: __init__.py
src/demo1/: main  makefile  pyproject.toml  test_builder.py
src/python_basic/: 01_variables.py  03_getting_user_input.py  07_if_statement.py  09_loop_in_python.py  10_list_comprehension.py  11_dictionary.py  12_destructuring_variables.py  13_function.py  15_dictionary_comprehension.py  17_OOP.py  18_magic_method.py  19_class_vs_static_method.py  README.MD  excercise01.md
src/python_basic/01_variables/: script.txt
src/python_basic/02_string_formatting/: script.txt
src/python_basic/03_getting_user_input/: script.txt
src/python_basic/05_lists_tuples_sets/: script.txt
src/python_basic/06_advanced_set_operations/: script.txt
src/python_basic/07_booleans/: script.txt
src/python_basic/08_if_statements/: script.txt
src/requirements/: readme.md
src/test_builder/: pyproject.toml
src/test_builder/src/test_builder/: __init__.py
(+35 files in other folders)
