[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "demo_database"
authors = [{ name = "Dummy", email = "dummy@abc.com" }]
description = "My package description"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["pydantic", "pymongo"]
version = "0.0.1"
scripts = { "demo_database" = "demo_database:main" }
